--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.3985 2005/10/09 09:06:46 wiz Exp $
+$NetBSD: TODO,v 1.3986 2005/10/09 10:45:46 abs Exp $
 
 Suggested new packages
 ======================
@@ -588,7 +588,6 @@ Suggested package updates
 	o kdrill-6.4
 	o kinput2-3.1
 	o kmess-1.3
-	o kmymoney2-0.6.4
 	o kodos-2.4.5
 	o krusader-1.60.0
 	o ksi-3.4.2
