--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.3986 2005/10/09 10:45:46 abs Exp $
+$NetBSD: TODO,v 1.3987 2005/10/09 12:36:15 markd Exp $
 
 Suggested new packages
 ======================
@@ -850,7 +850,6 @@ Suggested package updates
 	o pnet-0.7.0 [pkg/30516]
 	o pnetC-0.7.0 [pkg/30517]
 	o pnetlib-0.7.0 [pkg/30518]
-	o poedit-1.3.4
 	o poppy-4.01
 	o poptop-1.2.3
 	o potrace-1.7
