--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11390 2005/10/09 20:03:29 rillig Exp $
+$NetBSD: CHANGES,v 1.11391 2005/10/09 21:44:05 tron Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4362,3 +4362,6 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated editors/poedit to 1.3.4 [minskim 2005-10-09]
 	Updated textproc/latex2html to 2002.2.1nb4 [rillig 2005-10-09]
 	Updated chat/xchat to 2.4.5nb1 [tron 2005-10-09]
+	Added games/fortunes-calvin 0.1 [jschauma 2005-10-09]
+	Added games/fortunes-futurama 0.2 [jschauma 2005-10-09]
+	Added games/fortunes-h2g2 0.1 [jschauma 2005-10-09]
