--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11400 2005/10/10 17:24:43 reed Exp $
+$NetBSD: CHANGES,v 1.11401 2005/10/10 17:35:04 joerg Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4385,3 +4385,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated databases/postgresql80-client to 8.0.3nb3 [joerg 2005-10-10]
 	Renamed x11/imake to x11/XFree86-imake [reed 2005-10-10]
 	Updated lang/perl5 to 5.8.7nb4 [joerg 2005-10-10]
+	Updated games/fortunes-calvin to 0.2 [jschauma 2005-10-10]
