--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11420 2005/10/11 17:19:23 jlam Exp $
+$NetBSD: CHANGES,v 1.11421 2005/10/11 17:57:04 tv Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4409,3 +4409,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated security/openssl to 0.9.7h [jlam 2005-10-11]
 	Updated lang/sun-jdk15 to 5.0.5 [tv 2005-10-11]
 	Updated lang/sun-jre15 to 5.0.5 [tv 2005-10-11]
+	Updated x11/numlockx to 1.1 [reed 2005-10-11]
