--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.3996 2005/10/11 17:00:15 reed Exp $
+$NetBSD: TODO,v 1.3997 2005/10/12 07:32:52 wiz Exp $
 
 Suggested new packages
 ======================
@@ -829,7 +829,6 @@ Suggested package updates
 	o pfstat-1.8
 	o phoon-20030120
 	o photopc-3.05
-	o phpmyadmin-2.6.4pl2
 	o phylip-3.62
 	o piewm-1.03
 	o pilot-link-0.11.8
