--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11466 2005/10/13 20:40:24 minskim Exp $
+$NetBSD: CHANGES,v 1.11467 2005/10/13 20:43:30 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4569,3 +4569,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated devel/libidn to 0.5.19nb1 [minskim 2005-10-13]
 	Updated devel/libmimedir to 0.4nb1 [wiz 2005-10-13]
 	Updated comms/synce-rra to 0.9.1nb2 [wiz 2005-10-13]
+	Added sysutils/xenkernel20 version 2.0.7 [agc 2005-10-13]
