--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11541 2005/10/18 10:05:49 seb Exp $
+$NetBSD: CHANGES,v 1.11542 2005/10/18 11:45:47 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4690,3 +4690,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated graphics/digikam to 0.7.4 [seb 2005-10-18]
 	Updated graphics/digikamimageplugins to 0.7.4 [seb 2005-10-18]
 	Added graphics/digikam-doc version 0.7.4 [seb 2005-10-18]
+	Updated mail/turba to 2.0.4 [adrianp 2005-10-18]
