--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11552 2005/10/19 03:39:43 minskim Exp $
+$NetBSD: CHANGES,v 1.11553 2005/10/19 04:50:32 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4702,3 +4702,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated lang/py-psyco to 1.4 [wiz 2005-10-19]
 	Added lang/wsbasic version 1.2.4 [minskim 2005-10-19]
 	Added multimedia/xfmedia version 0.9.1 [minskim 2005-10-19]
+	Updated wm/windowlab to 1.33 [xtraeme 2005-10-19]
