--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11570 2005/10/20 00:23:38 wiz Exp $
+$NetBSD: CHANGES,v 1.11571 2005/10/20 00:32:57 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4725,3 +4725,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated www/links-gui to 2.1.0.19 [wiz 2005-10-20]
 	Updated net/mldonkey to 2.6.5 [wiz 2005-10-20]
 	Updated net/mldonkey-gui to 2.6.5 [wiz 2005-10-20]
+	Updated audio/mp3splt to 2.1c [wiz 2005-10-20]
