--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11598 2005/10/21 04:02:38 minskim Exp $
+$NetBSD: CHANGES,v 1.11599 2005/10/21 07:20:55 rillig Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4761,3 +4761,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Added emulators/z26 version 2.13 [minskim 2005-10-21]
 	Added sysutils/zidrav version 1.20 [minskim 2005-10-21]
 	Updated pkgtools/pkglint to 4.28.2 [rillig 2005-10-21]
+	Added multimedia/gst-plugins-xvid version 0.8.11 [xtraeme 2005-10-21]
