--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11643 2005/10/24 08:52:04 adam Exp $
+$NetBSD: CHANGES,v 1.11644 2005/10/24 09:55:47 drochner Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4821,3 +4821,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Added graphics/exifprobe version 2.0.1 [drochner 2005-10-24]
 	Added graphics/gimp24 version 2.3.4 [drochner 2005-10-24]
 	Updated math/py-rpy to 0.4.6 [drochner 2005-10-24]
+	Updated converters/wv to 1.0.3nb3 [tonio 2005-10-24]
