--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.4087 2005/10/24 08:52:05 adam Exp $
+$NetBSD: TODO,v 1.4088 2005/10/24 11:40:28 tonio Exp $
 
 Suggested new packages
 ======================
@@ -1214,7 +1214,6 @@ Suggested package updates
 	o swish-e-2.4.3
 	o sylpheed-claws-1.0.5
 	o sylpheed-claws-ghostscript-viewer-0.8
-	o sylpheed-devel-2.1.4
 	o sympa-5.1
 	o sysinfo-4.2.2
 	o tcl-itcl-3.2.1
