--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.4099 2005/10/26 10:17:35 adrianp Exp $
+$NetBSD: TODO,v 1.4100 2005/10/26 18:09:23 schmonz Exp $
 
 Suggested new packages
 ======================
@@ -373,7 +373,6 @@ Suggested package updates
 	o bdb-xml-2.0.9 [requires xerces-c>=2.6.0]
 	o beacon-1.3
 	o benchfft-3.1
-	o bibtex2html-1.76
 	o binutils-2.16.1
 	o bioperl-1.5.0
 	o bittorrent-4.1.4
