--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11680 2005/10/27 22:11:13 bad Exp $
+$NetBSD: CHANGES,v 1.11681 2005/10/28 02:48:11 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4870,3 +4870,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated security/libfwbuilder to 2.0.9 [bad 2005-10-28]
 	Updated security/fwbuilder to 2.0.9 [bad 2005-10-28]
 	Added x11/tzosdclock version 1.0.2 [minskim 2005-10-28]
+	Added x11/mxterm version 129 [minskim 2005-10-28]
