--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11688 2005/10/28 20:48:24 minskim Exp $
+$NetBSD: CHANGES,v 1.11689 2005/10/28 21:46:48 adrianp Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4879,3 +4879,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated x11/rxvt-unicode to 5.8 [minskim 2005-10-28]
 	Added net/balance version 3.15 [minskim 2005-10-28]
 	Updated net/smokeping to 2.0.4 [adrianp 2005-10-28]
+	Updated net/wap-utils to 1.3.2nb3 [kristerw 2005-10-28]
