--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11689 2005/10/28 21:46:48 adrianp Exp $
+$NetBSD: CHANGES,v 1.11690 2005/10/28 22:03:40 kristerw Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4880,3 +4880,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Added net/balance version 3.15 [minskim 2005-10-28]
 	Updated net/smokeping to 2.0.4 [adrianp 2005-10-28]
 	Updated net/wap-utils to 1.3.2nb3 [kristerw 2005-10-28]
+	Added net/chksniff version 0.2 [minskim 2005-10-29]
