--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.4106 2005/10/28 16:33:03 minskim Exp $
+$NetBSD: TODO,v 1.4107 2005/10/28 21:46:48 adrianp Exp $
 
 Suggested new packages
 ======================
@@ -729,7 +729,6 @@ Suggested package updates
 	o mapserver-4.2.5
 	o maradns-1.0.32
 	o matchbox-0.9.5
-	o mathomatic-12.5.0
 	o md-whois-4.7.8
 	o mdd-20050318
 	o mdf2iso-0.3.0
