--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11708 2005/10/29 23:47:05 epg Exp $
+$NetBSD: CHANGES,v 1.11709 2005/10/30 01:11:10 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4892,6 +4892,7 @@ Changes to the packages collection and infrastructure in 2005:
 	Added graphics/vnc2swf version 0.5.0 [xtraeme 2005-10-29]
 	Updated sysutils/dmidecode to 2.7 [reed 2005-10-29]
 	Renamed shells/9rc to sysutils/9base [minskim 2005-10-29]
+	Updated sysutils/9base to 20051028 [minskim 2005-10-29]
 	Updated wm/wmii to 20051017nb1 [minskim 2005-10-29]
 	Added net/mydns-pgsql version 1.0.0 [minskim 2005-10-29]
 	Added net/mydns-mysql version 1.0.0 [minskim 2005-10-29]
