--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11722 2005/10/31 09:24:34 xtraeme Exp $
+$NetBSD: CHANGES,v 1.11723 2005/10/31 09:55:23 taca Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4916,3 +4916,5 @@ Changes to the packages collection and infrastructure in 2005:
 	Added databases/mysql5-client version 5.0.15 [xtraeme 2005-10-31]
 	Added databases/mysql5-server version 5.0.15 [xtraeme 2005-10-31]
 	Updated www/squid to 2.5.12nb2 [taca 2005-10-31]
+	Updated sysutils/bacula to 1.36.3nb2 [wiz 2005-10-31]
+	Added sysutils/bacula-client version 1.36.3 [wiz 2005-10-31]
