--- a/pkgtools/pkglint/TODO
+++ b/pkgtools/pkglint/TODO
@@ -7,3 +7,4 @@
 * check for direct use of *DIR
 * ONLY_FOR_PLATFORM => NOT_FOR_PLATFORM
 * -Wl,-rpath
+* include "../../mk/bsd.prefs.mk" before using "+=".
