--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11787 2005/11/04 03:01:58 minskim Exp $
+$NetBSD: CHANGES,v 1.11788 2005/11/04 03:48:31 grant Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -5038,3 +5038,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Added sysutils/pdumpfs version 1.3 [minskim 2005-11-04]
 	Added multimedia/ming version 0.2 [minskim 2005-11-04]
 	Updated mail/clamav to 0.87.1 [grant 2005-11-04]
+	Added multimedia/py-ming version 0.2 [minskim 2005-11-04]
