--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11845 2005/11/06 16:57:56 joerg Exp $
+$NetBSD: CHANGES,v 1.11846 2005/11/06 23:58:45 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -5096,3 +5096,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated net/nsd to 2.2.0nb2 [joerg 2005-11-06]
 	Updated www/lighttpd to 1.4.7 [joerg 2005-11-06]
 	Added net/netpipes version 4.2 [jlam 2005-11-06]
+	Updated audio/xmix to 2.1nb1 [joerg 2005-11-06]
