--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11889 2005/11/10 21:13:02 wiz Exp $
+$NetBSD: CHANGES,v 1.11890 2005/11/11 07:26:09 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -5168,3 +5168,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated sysutils/bacula to 1.38.0 [wiz 2005-11-11]
 	Updated sysutils/bacula-client to 1.38.0 [wiz 2005-11-11]
 	Updated sysutils/bacula-doc to 1.38.0 [wiz 2005-11-11]
+	Updated math/mathomatic to 12.5.1 [minskim 2005-11-11]
