--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11900 2005/11/12 06:35:27 jlam Exp $
+$NetBSD: CHANGES,v 1.11901 2005/11/12 07:41:42 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -5179,3 +5179,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Added mail/esmtp version 0.5.1 [minskim 2005-11-12]
 	Updated sysutils/grub to 0.97nb3 [jlam 2005-11-12]
 	Updated mail/sylpheed-devel to 2.1.6 [xtraeme 2005-11-12]
+	Added textproc/libxml++2 version 2.10.0 [wiz 2005-11-12]
