--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.4166 2005/11/13 10:18:42 wiz Exp $
+$NetBSD: TODO,v 1.4167 2005/11/13 22:45:51 adrianp Exp $
 
 Suggested new packages
 ======================
@@ -632,7 +632,6 @@ Suggested package updates
 	o hugs-200503 [pkg/30071]
 	o hydra-5.0
 	o hydrogen-0.9.2
-	o hylafax-4.2.2
 	o hyperestraier-1.0.5
 	o i2ocfg-1.1
 	o icdprog-0.5
